# gctoolsui

./: .gitmodules  CMakeLists.txt  readme.md  vcpkg.json
.github/workflow/: build.yml
.github/workflows/: build.yml
include/: MainWindow.hpp  bytesize.hpp
src/: MainWindow.cpp  main.cpp
ui/: gctools.ui  settings.ui
